--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,8 @@ jobs:
         
       # run tests!
       - run: gradle test
+      - run: gradle build
+
+      - store_artifacts:
+          path: /build/libs/hu.wirthandras.common.math-0.1-SNAPSHOT.jar
 
