--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,5 +43,5 @@ jobs:
       - run: gradle build
 
       - store_artifacts:
-          path: /build/libs/hu.wirthandras.common.math-0.1-SNAPSHOT.jar
+          path: build/libs/*.jar
 
