--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,5 +43,5 @@ jobs:
       - run: gradle build
 
       - store_artifacts:
-          path: build/libs/*.jar
+          path: ./build/libs/*.jar
 
