--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,9 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
         
       # run tests!
-      - run: gradle test
       - run: gradle build
 
       - store_artifacts:
           path: ./build/libs/*.jar
+          destination: artifact-file
 
