--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
         
       # run tests!
       - run: gradle build
+      - run: gradle sonarqube
 
       - store_artifacts:
           path: build/libs/hu.wirthandras.common.math-0.1-SNAPSHOT.jar
