--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ test {
 
 sonarqube {
     properties {
-        properties["sonar.projectKey"] = System.getenv('SONAR_HOST_URL')
+        properties["sonar.projectKey"] = System.getenv('SONAR_PROJECT_KEY')
         properties["sonar.organization"] = System.getenv('SONAR_ORGANISATION')
-        properties["sonar.host.url"] = System.getenv('SONAR_PROJECT_KEY')
+        properties["sonar.host.url"] = System.getenv('SONAR_HOST_URL')
         properties["sonar.login"] = System.getenv('SONAR_TOKEN')
     }
 }
