jacocoTestReport step added

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.2.71'
     id "org.sonarqube" version "2.7"
+    id 'jacoco'
 }
 
 group 'hu.wirthandras'
@@ -25,6 +26,10 @@ compileTestKotlin {
 
 test {
     useJUnitPlatform()
+}
+
+jacoco {
+    toolVersion = "0.8.3"
 }
 
 sonarqube {
