--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
         
       # run tests!
       - run: gradle build
+      - run: gradle jacocoTestReport
       - run: gradle sonarqube
 
       - store_artifacts:
